--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
          <iframe name="hidden_iframe" 
          id="hidden_iframe"
          style="display: none"
-         onload="if(submitted){window.location='#'}"></iframe>
+         onload="if(submitted){window.location='https://portfoliohtmlcss062022.netlify.app/'}"></iframe>
            <!--redirect user to your website after submitting to google sheets end-->
 
             <form  
